compiler/tests-spec/testData/diagnostics/linked/expressions/constant-literals/the-types-for-integer-literals/p-1/neg/1.3.fir.kt
// TESTCASE NUMBER: 1
val value_1 = 0l

// TESTCASE NUMBER: 2
val value_2 = 1000000000000000l

// TESTCASE NUMBER: 3
val value_3 = 0X0l

// TESTCASE NUMBER: 4
val value_4 = 0b101l
